--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-
+  <link rel="manifest" href="manifest.json">
+  <link rel="apple-touch-icon" href="/src/assets/favicon.png">
   <link rel="icon" type="image/svg+xml" href="/src/assets/favicon.svg">
-  <link rel="stylesheet" href="style.css">
   <title>Newsify</title>
 </head>
 
